dropdown/select: support disabled state

--- a/src/ng-vcl/dropdown/dropdown.component.html
+++ b/src/ng-vcl/dropdown/dropdown.component.html
@@ -4,6 +4,7 @@
   #metalist
   class="vclDropdown vclOpen"
   role="listbox"
+  [class.vclDisabled]="isDisabled"
   [attr.tabindex]="tabindex"
   [attr.aria-multiselectable]="mode === 'multiple'"
   [style.position]="'static'"
@@ -12,20 +13,18 @@
   (blur)="onMetalistBlur()"
   (keydown)="onMetalistKeydown($event)"
   >
-  <!--  (mousedown) is used because tap will break scrolling on mobiles
-  -->
   <vcl-metalist-item #metaItem
                     *ngFor="let item of items" 
                     [metadata]="item"
                     [selected]="item.selected"
-                    [disabled]="item.disabled"
+                    [disabled]="disabled || item.disabled"
                     [marked]="item.marked"
                     [value]="item.value">
     <li
       role="option"
       class="vclDropdownItem"
       [class.vclSelected]="metaItem.selected"
-      [class.vclDisabled]="metaItem.disabled"
+      [class.vclDisabled]="disabled || metaItem.disabled"
       [class.vclHighlighted]="focused && metaItem.marked"
       [attr.aria-selected]="metaItem.selected"
       (tap)="onMetalistItemTap(metaItem)">
