demo: minor changes/fixes

--- a/demo/app/demos/checkbox/demo.component.html
+++ b/demo/app/demos/checkbox/demo.component.html
@@ -7,14 +7,14 @@
 <vcl-checkbox [disabled]="true"></vcl-checkbox>
 
 <h3>Checkbox with label:</h3>
-<h4>right</h4>
-<vcl-checkbox [(checked)]="isChecked2" labelPosition="right">
-  <label vcl-form-control-label label="rightLabel" subLabel="SubRightLabel"></label>
+<h4>right (default)</h4>
+<vcl-checkbox [(checked)]="isChecked2">
+  <label vcl-form-control-label label="RightLabel" subLabel="RightSubLabel"></label>
 </vcl-checkbox>
 
 <h4>left</h4>
 <vcl-checkbox [(checked)]="isChecked3" labelPosition="left">
-  <label vcl-form-control-label label="rightLabel" subLabel="SubRightLabel"></label>
+  <label vcl-form-control-label label="LleftLabel" subLabel="LeftSubLabel"></label>
 </vcl-checkbox>
 
 <h3>Checkbox (ngModel):</h3>
