input: optimize disabled support

--- a/demo/app/demos/input/demo.component.html
+++ b/demo/app/demos/input/demo.component.html
@@ -25,3 +25,10 @@
 <h3>Input (readonly)</h3>
 <input vcl-input value='readOnly' readonly=true />
 <br>
+
+<br>
+<br>
+<br>
+<h3>Input (disabled)</h3>
+<input vcl-input value='disabled' [disabled]="true" />
+<br>
