--- a/src/ng-vcl/dropdown/dropdown.component.html
+++ b/src/ng-vcl/dropdown/dropdown.component.html
@@ -4,7 +4,7 @@
   #metalist
   class="vclDropdown vclOpen"
   role="listbox"
-  [class.vclDisabled]="isDisabled"
+  [class.vclDisabled]="disabled"
   [attr.tabindex]="tabindex"
   [attr.aria-multiselectable]="mode === 'multiple'"
   [style.position]="'static'"
