password-input: optimizations

--- a/src/ng-vcl/password-input/password-input.component.html
+++ b/src/ng-vcl/password-input/password-input.component.html
@@ -1,12 +1,13 @@
 <input 
   vcl-input
+  [attr.id]="inputId"
   [attr.type]="visible ? 'text' : 'password'"
   [disabled]="disabled"
   [tabindex]="tabindex"
   [selectOnFocus]="selectOnFocus"
+  [placeholder]="placeholder"
   [ngModel]="value"
   (ngModelChange)="onModelChange($event)"
-  [placeholder]="placeholder"
   (blur)="onBlur()">
 <span class="vclInputGroupButton">
   <button vcl-button
