--- a/demo/app/demos/password-input/demo.component.html
+++ b/demo/app/demos/password-input/demo.component.html
@@ -1,5 +1,5 @@
 <h3>Password input</h3>
-<vcl-password-input [(ngModel)]="password" placeholder="Enter password" tabindex=5></vcl-password-input>
+<vcl-password-input [(ngModel)]="password" placeholder="Enter password"></vcl-password-input>
 <br>
 <b>Password input value:</b> {{password}}
 
