added animation duration/speed parameter in progress bar component

--- a/demo/app/demos/progress-bar/demo.component.html
+++ b/demo/app/demos/progress-bar/demo.component.html
@@ -8,6 +8,8 @@
 <br>
 <vcl-progress-bar [indeterminate]="true"></vcl-progress-bar>
 <br>
+<vcl-progress-bar [indeterminate]="true" [speed]="5"></vcl-progress-bar>
+<br>
 <vcl-progress-bar [value]="40" [indeterminate]="true"></vcl-progress-bar>
 <br>
 <vcl-progress-bar [value]="110" [indeterminate]="true"></vcl-progress-bar>
