--- a/src/ng-vcl/progress-bar/progress-bar.component.html
+++ b/src/ng-vcl/progress-bar/progress-bar.component.html
@@ -7,6 +7,6 @@
      >
   <div *ngIf="showValue" class="vclProgress vclPrimary vclLayoutFit" [style.transform]="transformValue"></div>
   <div *ngIf="showSecondaryValue" class="vclProgress vclSecondary vclLayoutFit" [style.transform]="transformSecondaryValue"></div>
-  <div *ngIf="showIndeterminate" class="vclProgress vclPrimary vclLayoutFit"></div>
+  <div *ngIf="showIndeterminate" class="vclProgress vclPrimary vclLayoutFit" [style.animation-duration]="animationDurationValue"></div>
 </div>
 
