busy-indicator: reflect latest vcl changes + enhancements

--- a/src/ng-vcl/busy-indicator/busy-indicator.component.html
+++ b/src/ng-vcl/busy-indicator/busy-indicator.component.html
@@ -1,6 +1,9 @@
-<div class="vclLayoutVertical vclLayoutCenterJustified">
-  <div class="vclBusyIndicator" role="status">
-    <i [ngClass]="indicatorClass"></i>
+<div class="vclLayoutVertical vclLayoutCenterJustified vclIcogram" role="status">
+  <div class="vclIcon vclLayoutSelfCenter" [attr.aria-label]="label" role="img">
+    <img [style.height]="iconHeight" [style.width]="iconWidth" [src]="indicatorSrc" role=”presentation”>
+  </div>
+  <div class="vclLayoutSelfCenter">
     <ng-content></ng-content>
   </div>
 </div>
+
