[package.json]: update; [month-picker]: be always displayed so container can be animated; [plotly]: add animate method

--- a/src/ng-vcl/month-picker/month-picker.component.html
+++ b/src/ng-vcl/month-picker/month-picker.component.html
@@ -1,5 +1,4 @@
-<div class="vclDatePicker"
-    [class.vclLayoutHidden]="!expanded">
+<div class="vclDatePicker">
   <div class="vclDataGrid vclDGVAlignMiddle vclDGAlignCentered vclCalendar vclCalInput"
     [attr.role]="'grid'"
     [attr.tabindex]="tabindex"
