[dropdown]: add animations

--- a/src/ng-vcl/dropdown/dropdown.component.html
+++ b/src/ng-vcl/dropdown/dropdown.component.html
@@ -1,4 +1,5 @@
 <ul vcl-metalist
+  [class.vclLayoutHidden]="!expanded" 
   [selectionMode]="selectionMode"
   [maxSelectableItems]="maxSelectableItems"
   #metalist
