--- a/src/ng-vcl/select/select.component.html
+++ b/src/ng-vcl/select/select.component.html
@@ -27,6 +27,7 @@
       #dropdown
       tabindex="-1"
       [disabled]="disabled"
+      [expanded]="expanded"
       [selectionMode]="selectionMode"
       [maxSelectableItems]="maxSelectableItems"
       [style.display]="expanded ? null : 'none'"
