select: allow to override the dropdown z-index

--- a/src/ng-vcl/select/select.component.html
+++ b/src/ng-vcl/select/select.component.html
@@ -34,7 +34,7 @@
       [style.top.px]="dropdownTop"
       [style.width]="'100%'"
       [style.position]="'absolute'"
-      [style.zIndex]="999999"
+      [style.zIndex]="zIndex"
       (change)="onDropdownChange($event)">
     <vcl-dropdown-option 
       *ngFor="let item of items" 
