Dropdown highlighting changed

--- a/demo/styles/demo.styl
+++ b/demo/styles/demo.styl
@@ -121,3 +121,11 @@ code.hljs
 .jsoneditor-frame input
   min-height: 0.5em !important
 // json-editor
+
+//Dropdown
+.vclDropdown
+  & .vclDropdownItem
+    &.vclSelected,
+    &.vclSelected:hover,
+    &.vclSelected:focus
+      background-color: var(--dropdown-item-bg-hover-color)
