--- a/src/jss-form/jss-form-object.component.html
+++ b/src/jss-form/jss-form-object.component.html
@@ -1,31 +1,55 @@
 <div [formGroup]="form">
   <ng-container *ngIf="!fo.formObjects;else nested">
+
     <ng-container [ngSwitch]="fo.formType">
+
       <ng-container  *ngSwitchCase="'text'">
         <label vcl-form-control-label [label]="fo.label" [required]="fo.required" [for]="fo.id"></label>
         <vcl-input-control-group [type]="'error'" [label]="errorLabel">
-          <input vcl-input 
+          <input vcl-input
                  [id]="fo.id"
-                 type="text" 
+                 type="text"
                  [class.vclError]="hasError"
-                 [placeholder]="fo.placeholder" 
+                 [placeholder]="fo.placeholder"
                  [formControlName]="fo.key" />
         </vcl-input-control-group>
+      </ng-container>
+
+      <ng-container  *ngSwitchCase="'textarea'">
+        <label vcl-form-control-label [label]="fo.label" [required]="fo.required" [for]="fo.id"></label>
+        <vcl-input-control-group [type]="'error'" [label]="errorLabel">
+          <textarea vcl-textarea [id]="fo.id"  [formControlName]="fo.key" [autogrow]="true" [minRows]="5" [maxRows]="10"></textarea>
+        </vcl-input-control-group>
+      </ng-container>
+
+      <ng-container  *ngSwitchCase="'password'">
+        <label vcl-form-control-label [label]="fo.label" [required]="fo.required" [for]="fo.id"></label>
+        <vcl-input-control-group [type]="'error'" [label]="errorLabel">
+          <vcl-password-input [id]="fo.id" [formControlName]="fo.key" [placeholder]="fo.placeholder"></vcl-password-input>
+        </vcl-input-control-group>
+      </ng-container>
+
+
+      <ng-container  *ngSwitchCase="'hidden'">
+          <input
+                 [id]="fo.id"
+                 type="hidden"
+                 [formControlName]="fo.key" />
+
       </ng-container>
 
       <ng-container  *ngSwitchCase="'number'">
         <label vcl-form-control-label [label]="fo.label" [for]="fo.id"></label>
         <vcl-input-control-group [type]="'error'" [label]="errorLabel">
-          <input vcl-input 
+          <input vcl-input
                   [id]="fo.id"
-                  type="number" 
-                  valueType="number" 
-                  placeholder="number" 
+                  type="number"
+                  valueType="number"
+                  placeholder="number"
                   [class.vclError]="hasError"
-                  [name]="fo.key" 
+                  [name]="fo.key"
                   [formControlName]="fo.key" />
-        </vcl-input-control-group>   
-        
+        </vcl-input-control-group>
       </ng-container>
 
       <ng-container *ngSwitchCase="'select'">
@@ -35,50 +59,50 @@
                       [formControlName]="fo.key"
                       [class.vclError]="hasError"
                       [mode]="fo.schema.type==='array' ? 'multiple' : 'single'">
-            <vcl-select-option *ngFor="let option of fo.options" [value]="option.value" [label]="option.label"></vcl-select-option>  
+            <vcl-select-option *ngFor="let option of fo.options" [value]="option.value" [label]="option.label"></vcl-select-option>
           </vcl-select>
-        </vcl-input-control-group>  
+        </vcl-input-control-group>
       </ng-container>
 
       <ng-container *ngSwitchCase="'dropdown'">
         <label vcl-form-control-label [label]="fo.label" [for]="fo.id"></label>
         <vcl-input-control-group [type]="'error'" [label]="errorLabel">
-          <vcl-dropdown 
+          <vcl-dropdown
                         [id]="fo.id"
                         [formControlName]="fo.key"
                         [class.vclError]="hasError"
                         [mode]="fo.schema.type==='array' ? 'multiple' : 'single'">
             <vcl-dropdown-option *ngFor="let option of fo.options" [value]="option.value" [label]="option.label"></vcl-dropdown-option>
           </vcl-dropdown>
-        </vcl-input-control-group> 
+        </vcl-input-control-group>
       </ng-container>
 
       <ng-container *ngSwitchCase="'switch'">
         <label vcl-form-control-label [label]="fo.label" [for]="fo.id"></label>
-        <vcl-flip-switch 
+        <vcl-flip-switch
                          [id]="fo.id"
-                         onLabel="{{'Yes' | loc }}" 
-                         offLabel="{{'No' | loc}}" 
+                         onLabel="{{'Yes' | loc }}"
+                         offLabel="{{'No' | loc}}"
                          [formControlName]="fo.key">
         </vcl-flip-switch>
       </ng-container>
-        
+
       <ng-container *ngSwitchCase="'slider'">
         <label vcl-form-control-label [label]="fo.label" [for]="fo.id"></label>
         <vcl-slider [id]="fo.id"
                     [class.vclError]="hasError"
-                    [min]="fo.schema.mininum" 
+                    [min]="fo.schema.mininum"
                     [max]="fo.schema.maximum"
                     [scale]="fo.schema.scale"
                     [formControlName]="fo.key">
-        </vcl-slider> 
+        </vcl-slider>
       </ng-container>
 
       <ng-container *ngSwitchCase="'checkbox'">
         <label vcl-form-control-label wrapping=true [for]="fo.id">
           <vcl-checkbox [id]="fo.id" [formControlName]="fo.key">
             <label vcl-form-control-label [label]="fo.label"></label>
-          </vcl-checkbox> 
+          </vcl-checkbox>
         </label>
       </ng-container>
 
@@ -91,46 +115,49 @@
           </vcl-radio-group>
         </vcl-input-control-group>
       </ng-container>
-      
+
       <ng-container *ngSwitchCase="'submit'">
-        <button vcl-button 
-                type="submit" 
-                [disabled]="fo.schema.autoDisable && !form.valid" 
-                [prepIcon]="fo.schema.prepIcon" 
-                [appIcon]="fo.schema.appIcon" 
+        <button vcl-button
+                type="submit"
+                [disabled]="fo.schema.autoDisable && !form.valid"
+                [prepIcon]="fo.schema.prepIcon"
+                [appIcon]="fo.schema.appIcon"
                 [ngClass]="fo.schema.class"
-                [label]="fo.schema.label">        
+                [label]="fo.schema.label">
         </button>
       </ng-container>
+
       <ng-container *ngSwitchCase="'button'">
-        <button vcl-button 
+        <button vcl-button
                 type="button"
-                [prepIcon]="fo.schema.prepIcon" 
-                [appIcon]="fo.schema.appIcon" 
+                [prepIcon]="fo.schema.prepIcon"
+                [appIcon]="fo.schema.appIcon"
                 [ngClass]="fo.schema.class"
-                [label]="fo.schema.label" 
-                (tap)="onAction(fo.schema.action || fo.schema)"></button>        
+                [label]="fo.schema.label"
+                (tap)="onAction(fo.schema.action || fo.schema)"></button>
       </ng-container>
+
       <ng-container *ngSwitchCase="'buttons'">
         <div class="vclLooseButtonGroup">
           <ng-container *ngFor="let btnFo of fo.buttons">
             <ng-container *ngIf="btnFo.formType === 'submit'">
-              <button vcl-button 
-                      type="submit" 
-                      [disabled]="btnFo.schema.autoDisable && !form.valid" 
-                      [prepIcon]="btnFo.schema.prepIcon" 
-                      [appIcon]="btnFo.schema.appIcon" 
+              <button vcl-button
+                      type="submit"
+                      [disabled]="btnFo.schema.autoDisable && !form.valid"
+                      [prepIcon]="btnFo.schema.prepIcon"
+                      [appIcon]="btnFo.schema.appIcon"
                       [ngClass]="btnFo.schema.class"
                       [label]="btnFo.schema.label">
               </button>
             </ng-container>
+
             <ng-container *ngIf="btnFo.formType === 'button'">
-              <button vcl-button 
+              <button vcl-button
                       type="button"
-                      [prepIcon]="btnFo.schema.prepIcon" 
-                      [appIcon]="btnFo.schema.appIcon" 
+                      [prepIcon]="btnFo.schema.prepIcon"
+                      [appIcon]="btnFo.schema.appIcon"
                       [ngClass]="btnFo.schema.class"
-                      [label]="btnFo.schema.label" 
+                      [label]="btnFo.schema.label"
                       (tap)="onAction(btnFo.schema.action || button)"></button>
             </ng-container>
           </ng-container>
@@ -139,13 +166,14 @@
 
     </ng-container>
   </ng-container>
-  <ng-template #nested>
 
+  <ng-template #nested>
     <fieldset class="vclFieldset" style="margin-top: 20px;margin-bottom: 20px;">
       <legend>{{fo.label}}</legend>
       <ng-container *ngFor="let subFo of fo.formObjects">
-        <vcl-jss-form-object [fo]="subFo" [form]="form.get(fo.key)"></vcl-jss-form-object>    
+        <vcl-jss-form-object [fo]="subFo" [form]="form.get(fo.key)"></vcl-jss-form-object>
       </ng-container>
     </fieldset>
-  </ng-template>  
+  </ng-template>
+
 </div>
