--- a/demo/app/demos/notification/demo.component.html
+++ b/demo/app/demos/notification/demo.component.html
@@ -14,3 +14,4 @@
 <button vcl-button (tap)="warning()" label="A warning"></button><br><br>
 <button vcl-button (tap)="error()" label="An error message"></button><br><br>
 <button vcl-button (tap)="custom()" label="A custom message"></button><br><br>
+<button vcl-button (tap)="componentAsContent()" label="A custom component message"></button><br><br>
