jss-form: possibility to overwrite password field icon. with fallback to dafault

--- a/src/jss-form/jss-form-object.component.html
+++ b/src/jss-form/jss-form-object.component.html
@@ -29,7 +29,8 @@
           <vcl-password-input [id]="fo.id"
           [visibleIcon]="fo.schema.visibleIcon || ' fa fa-eye '"
           [invisibleIcon]="fo.schema.invisibleIcon || ' fa fa-eye-slash '"
-          [formControlName]="fo.key" [placeholder]="fo.placeholder"></vcl-password-input>
+          [formControlName]="fo.key"
+          [placeholder]="fo.placeholder"></vcl-password-input>
         </vcl-input-control-group>
       </ng-container>
 
