--- a/src/plotly/plotly.component.html
+++ b/src/plotly/plotly.component.html
@@ -3,4 +3,8 @@
     id="{{ plotId }}"
     class="{{ plotClass }}">
   </div>
+  <div 
+    id="{{ plotHoverInfoId }}"
+    class="hoverInfo {{ plotHoverInfoClass }}">
+  </div>
 </div>
