--- a/src/ng-vcl/busy-indicator/busy-indicator.component.html
+++ b/src/ng-vcl/busy-indicator/busy-indicator.component.html
@@ -1,4 +1,4 @@
-<div class="vclLayoutVertical vclLayoutCenterJustified vclIcogram" role="status">
+<div class="vclLayoutCenterJustified vclIcogram {{direction == 'vertical' ? 'vclLayoutVertical' : 'vclLayoutHorizontal'}}" role="status">
   <div class="vclIcon vclLayoutSelfCenter" [attr.aria-label]="label" role="img">
     <img [style.height]="iconHeight" [style.width]="iconWidth" [src]="indicatorSrc" role=”presentation”>
   </div>
