--- a/demo/src/demos/busy-indicator/demo.component.html
+++ b/demo/src/demos/busy-indicator/demo.component.html
@@ -9,17 +9,29 @@
 <br><br>
 
 <h3>Horizontal busy indicators:</h3>
-<vcl-busy-indicator direction="horizontal">
+<vcl-busy-indicator [layout]="horizontal">
   Loading...
 </vcl-busy-indicator>
 <br><br>
-<vcl-busy-indicator direction="horizontal" type="straight">
+<vcl-busy-indicator [layout]="horizontal" type="straight">
+  Loading...
+</vcl-busy-indicator>
+<br><br>
+
+<h3>Indicator from icons:</h3>
+<vcl-busy-indicator classSrc="fa fa-circle-o-notch fa-spin fa-3x fa-fw">
+  Loading...
+</vcl-busy-indicator>
+<br><br>
+
+<h3>Indicator from images:</h3>
+<vcl-busy-indicator imageSrc="http://www.polidoor.com/assets/img/loading.gif">
   Loading...
 </vcl-busy-indicator>
 <br><br>
 
 <h3>Busy container:</h3>
-<div class="vclContainer vclLayoutHorizontal" style="height:15em" [vclBusy]="isBusy" busyLabel="Loading..." busyIndicatorType="straight">
+<div class="vclContainer vclLayoutHorizontal" style="height:15em" [vclBusyIndicatorCover]="isBusy" busyLabel="Loading..." busyIndicatorType="straight">
   <div style="padding:0.5em" class="vclLayoutFlex">
     Busy container<br>
     <button vcl-button (tap)="makeBusy()" label="Make container busy for 3 secs"></button>
@@ -28,7 +40,7 @@
 <br><br>
 
 <h3>Horizontal busy container:</h3>
-<div class="vclContainer vclLayoutHorizontal" style="height:15em" [vclBusy]="isVerticalBusy" busyLabel="Loading..." busyIndicatorType="circle" busyIndicatorDirection="horizontal">
+<div class="vclContainer vclLayoutHorizontal" style="height:15em" [vclBusyIndicatorCover]="isVerticalBusy" busyLabel="Loading..." busyIndicatorType="circle" busyIndicatorDirection="horizontal">
   <div style="padding:0.5em" class="vclLayoutFlex">
     Busy container<br>
     <button vcl-button (tap)="makeVerticalBusy()" label="Make container busy for 3 secs"></button>
