Fix inline form example

--- a/demo/src/demos/form-layouts/demo.component.html
+++ b/demo/src/demos/form-layouts/demo.component.html
@@ -64,12 +64,12 @@ The forms can be in one of these layouts:<br>
 
 <h3>Inline input</h3>
 <form class="vclForm vclFormInline">
-  <label vcl-form-control-label [required]="true" label="Label">
+  <label vcl-form-control-label [required]="true" label="Label" class="vclInputInlineControlGroup">
     <input vcl-input placeholder="Placeholder">
   </label>
 
   <vcl-checkbox>
-    <label vcl-form-control-label label="Checkbox"></label>
+    <label vcl-form-control-label label="Checkbox" class="vclInputInlineControlGroup"></label>
   </vcl-checkbox>
 
   <button vcl-button label="Submit"></button>
