[month-picker]: add Month interface; [plotly]: OnPush change detection

--- a/src/plotly/plotly.component.html
+++ b/src/plotly/plotly.component.html
@@ -5,6 +5,6 @@
   </div>
   <div 
     id="{{ plotHoverInfoId }}"
-    class="hoverInfo {{ plotHoverInfoClass }}">
+    class="{{ plotHoverInfoClass }}">
   </div>
 </div>
