--- a/src/ng-vcl/zoom-box/zoom-box-magnifier.component.html
+++ b/src/ng-vcl/zoom-box/zoom-box-magnifier.component.html
@@ -1,5 +1,5 @@
 <div style="position: relative;">
-  <img #img style="position: relative;" [src]="image" (mousemove)="onMove($event)" (mouseout)="onOut()">
+  <img #img style="position: relative;" [src]="image" (mousemove)="onMove($event)">
 
   <div class="vclZoomBoxMagnifier" [ngStyle]="{
   'top': y + 'px',
