--- a/demo/src/demos/table/demo.component.html
+++ b/demo/src/demos/table/demo.component.html
@@ -31,6 +31,13 @@
       <td align-center></td>
     </tr>
     <tr>
+      <td><a href="#table">Lorem ipsum dolor sit amet</a>, Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+        voluptua.</td>
+      <td [align-right]="true">11.000</td>
+      <td align-center>Sent</td>
+      <td align-center></td>
+    </tr>
+    <tr>
       <td [overflow-ellipsis]="readMore"><a *ngIf="readMore" (click)="readMore = false">Read more</a> Truncated content. Lorem ipsum dolor sit amet, consetetur
         sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
         At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem
